project/k8s/postgres-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: ryanpujo/postgres
          volumeMounts:
            - mountPath: "/var/lib/postgres/data"
              name: postgres-data
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: postgres-srv
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
      protocol: TCP
  selector:
    app: postgres
