project/k8s/product-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: ryanpujo/product-service
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: product-service-srv
spec:
  selector:
    app: product-service
  ports:
  - port: 5002
    targetPort: 5002
    protocol: TCP
    name: product-service
