project/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: emporium.com
      http:
        paths:
          - path: /api/user/create
            backend:
              service:
                name: broker-service-srv
                port:
                  number: 5001
            pathType: Prefix
          - path: /api/test
            backend:
              service:
                name: broker-service-srv
                port:
                  number: 5001
            pathType: Prefix
          - path: /api/register
            pathType: Prefix
            backend:
              service:
                name: broker-service-srv
                port:
                  number: 5001
          - path: /api/product/create
            pathType: Prefix
            backend:
              service:
                name: broker-service-srv
                port:
                  number: 5001
          - path: /?(.*)
            backend:
              service:
                name: front-end-srv
                port:
                  number: 3000
            pathType: Prefix
